# arena_ws

./: .gitignore  README.md
arena/arena-rosnav/arena_bringup/configs/: task_generator.yaml
arena/arena-rosnav/arena_bringup/launch/: start_arena.launch  start_training.launch  visualization_training.launch
arena/arena-rosnav/arena_bringup/params/: mpc_config.yaml
arena/arena-rosnav/arena_bringup/rviz/: nav.rviz  nav_arena_eval.rviz  nav_e2e_mpc_eval.rviz  nav_e2e_mpc_train.rviz  nav_eval_pedsim.rviz  nav_eval_vis.rviz  nav_flatland_s10d10.rviz  nav_flatland_s20d20.rviz
arena/arena-rosnav/task_generator/task_generator/: constants.py  shared.py  task_generator_node.py
arena/arena-rosnav/testing/scripts/: convex_filepath.txt  drl_agent_node.py  lidar_filepath.txt  lidar_to_image.py
arena/arena-rosnav/training/scripts/: train_agent.py
arena/evaluation/: .gitignore
arena/simulation-setup/: .gitignore
arena/simulation-setup/worlds/: .gitignore
arena/utils/crowdsim/: README.md
arena/utils/crowdsim/crowdsim/: CMakeLists.txt  package.xml
arena/utils/crowdsim/crowdsim/launch/: crowdsim.launch
arena/utils/crowdsim/crowdsim_msgs/: CMakeLists.txt  package.xml
arena/utils/crowdsim/crowdsim_msgs/msg/: SemanticData.msg
planners/: .gitignore
planners/arena-ros/: CMakeLists.txt  README.md  package.xml
planners/arena-ros/launch/: arena_node.launch
planners/arena-ros/scripts/: arena_node_tb3.py  play_agent.py
planners/cohan/: README.md
planners/rlca-ros/: CMakeLists.txt  README.md  package.xml  rlca_node_tb3.py
planners/rosnav/agents/: .gitignore
planners/rosnav/scripts/: rosnav_node.py
(+211 files in other folders)
